# beer_info

./: .coverage  .env.example  .gitignore  README.md  build_log.txt  cli.py  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  supabase_schema.sql  test_ddgs.py  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
app/: cli.py  layout.tsx  page.tsx  server.py
components/: BeerFilters.js  BeerFilters.tsx  BeerImage.tsx  BeerTable.js  BeerTable.tsx  BeerTableRow.tsx  GroupedBeerTable.js  GroupedBeerTable.tsx  GroupedClient.tsx  HomeClient.tsx  MultiSelectDropdown.js  MultiSelectDropdown.tsx  Pagination.js  Pagination.tsx  ShopCell.tsx
data/: breweries.json
database/: schema.sql
debug/: debug_chouseiya.py  debug_chouseiya_urllib.py  debug_ddg.py  debug_ddg_html_raw.py  debug_ddg_params.py  debug_google_search.html  debug_ichigo.html  debug_ichigo.py  debug_manual_search.py  debug_scrape_untappd_page.py  debug_untappd.py  debug_untappd_direct.py
docs/: design_and_requirements.md  enrich_untappd.md
frontend/: app.js  style.css
hooks/: useBeerData.ts  useBeerFilters.ts  useDebounce.ts
lib/: groupedBeers.ts  supabase.ts
migrations/: remove_restocked_at.sql  remove_unused_columns.sql  remove_updated_at_trigger.sql
pages/: _app.js  _app.tsx  _document.js  grouped.js  grouped.tsx  index.html  index.js  index.tsx
public/: app-cloud.js  manifest.json  pagination.css  style.css
scratch/: analyze_failures.py  analyze_recent_failures.py  apply_rpc.py  calc_failure_rate.py  check_breweries_db.py  check_failures.py  check_rpc_timeout.py  (+16 more)
(+338 files in other folders)
