[project]
name = "beer-info"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.14.0",
    "google-genai>=1.54.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "mlx-lm>=0.31.3 ; sys_platform == 'darwin'",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "supabase>=2.25.0",
    "tenacity>=8.2.3",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
